<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        
        tools:context=".BillInputActivity">


     <TextView
            android:id="@+id/article_name_label"
            android:text="@string/article_name_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:textSize="16sp"
			android:layout_marginEnd="@dimen/item_input_margin"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
     
     <android.widget.TextInputLayout
            android:id="@+id/article_name_input_box"
 
            android:layout_width="0dp"
            android:layout_height="@dimen/line_height"
            android:textSize="16sp"
		 	android:layout_marginEnd="@dimen/item_input_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/article_name_label"
            app:layout_constraintEnd_toStartOf="@+id/price_label">

			<android.widget.AutoCompleteTextView
				android:id="@+id/article_name_input"
				android:layout_width="match_parent"
				android:layout_height="@dimen/line_height"
				android:hint="@string/article_name_input_hint"/>

	 </android.widget.TextInputLayout>
	 
	 
	 <TextView
            android:id="@+id/price_label"
            android:text="@string/price_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/price_input_box"/>
     
     <android.widget.TextInputLayout
            android:id="@+id/price_input_box"
 
            android:layout_width="50dp"
            android:layout_height="@dimen/line_height"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

			<android.widget.EditText
				android:id="@+id/price_input"
				android:layout_width="match_parent"
				android:layout_height="@dimen/line_height"
				android:hint="@string/price_input_hint"
				android:digits="0123456789.,"
				android:inputType="numberDecimal"/>
				
	 </android.widget.TextInputLayout>
	 
	 
	 
	 <TextView
            android:id="@+id/article_comment_label"
            android:text="@string/article_comment_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:textSize="16sp"
		 	android:layout_marginEnd="@dimen/item_input_margin"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/price_input_box"
            app:layout_constraintStart_toStartOf="parent"/>
            
	<EditText
            android:id="@+id/article_comment_input"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:textSize="16sp"
			android:inputType="text"
		    android:hint="@string/article_comment_input_hint"
		  	android:autofillHints="@string/article_comment_input_hint"

            app:layout_constraintTop_toBottomOf="@+id/price_input_box"
            app:layout_constraintStart_toEndOf="@+id/article_comment_label"
            app:layout_constraintEnd_toEndOf="parent"/>
            
	<TextView
            android:id="@+id/article_tags_label"
            android:text="@string/article_tags_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:textSize="16sp"
		   	android:layout_marginEnd="@dimen/item_input_margin"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/article_comment_label"
            app:layout_constraintStart_toStartOf="parent"/>
    
	<Button
            android:id="@+id/add_item_button"
            android:text="@string/add_item_button_label"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="addItem"

            app:layout_constraintTop_toBottomOf="@+id/article_tags_label"
            app:layout_constraintStart_toStartOf="parent"/>
            

</androidx.constraintlayout.widget.ConstraintLayout>
