<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        
        tools:context=".BillInputActivity">


    <TextView
            android:id="@+id/payee_label"
            android:text="@string/payee_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingEnd="20dp"
			android:paddingRight="20dp"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
     
     <android.widget.TextInputLayout
            android:id="@+id/payee_input_box"
 
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingEnd="20dp"
		 	android:paddingRight="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/payee_label">

			<android.widget.AutoCompleteTextView
				android:id="@+id/payee_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/payee_input_hint"/>

	 </android.widget.TextInputLayout>
	 
	 
	 <TextView
            android:id="@+id/payment_label"
            android:text="@string/payment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingEnd="20dp"
		 	android:paddingRight="20dp"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/payee_input_box"/>
     
     <android.widget.TextInputLayout
            android:id="@+id/payment_input_box"
 
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/payment_label">

			<android.widget.TextInputEditText
				android:id="@+id/payment_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/payment_input_hint"/>
	 </android.widget.TextInputLayout>
	 
	 
	 <TextView
            android:id="@+id/date_label"
            android:text="@string/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingEnd="20dp"
			android:paddingRight="20dp"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/date_input_box"/>
    
            
	<android.widget.TextInputLayout
			android:id="@+id/date_input_box"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent">

			<android.widget.EditText
				android:id="@+id/date_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:editable="false"
				android:focusable="false"
				android:hint="@string/date_input_hint"/>
	 </android.widget.TextInputLayout>
	 
	 
	 <Button
            android:id="@+id/add_bill_button"
            android:text="@string/add_bill_button_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingEnd="20dp"
		 	android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:textStyle="bold"
            android:onClick="addBill"

            app:layout_constraintTop_toBottomOf="@+id/payee_label"
            app:layout_constraintStart_toStartOf="parent"/>
            
            
	 <TextView
            android:id="@+id/item_label"
            android:text="@string/item_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingEnd="20dp"
		 	android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/add_bill_button"
            app:layout_constraintStart_toStartOf="parent"/>
            

            
            
      <include layout="@layout/item_input"
            android:id="@+id/item_input"></include>

</androidx.constraintlayout.widget.ConstraintLayout>
